# AUDITOR-APEL-plugin

./: .gitignore  README.md  apel_plugin.cfg  apel_plugin.py  auditor-apel-plugin.service  auditor_apel_plugin.cfg  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi_git.yml  publish_pypi_test.yml  pypi_publish.yml  style.yml  style_checks.yml  unit_tests.yml
scripts/: install.sh  publish.py  publish.sh  republish.py  republish.sh  uninstall.sh
src/: apel_plugin.py
src/apel_plugin/: __init__.py  apel_plugin.py  core.py  functions.py  publish.py  republish.py
src/auditor_apel_plugin/: core.py  publish.py  republish.py
src/scripts/: publish.py  republish.py
tests/: test_apel_plugin.py  test_auditor_apel_plugin.py
