[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apel_plugin"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
	     "python-auditor==0.0.7",
	     "pytz==2023.3",
	     "requests==2.28.2",
	     "cryptography==41.0.0",
]

[project.optional-dependencies]
style = [
      "black",
      "flake8",
]
tests = [
      "pytest",
      "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*__init__.py"]
branch = true

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-s -v --cov"
testpaths = [
	  "tests",
]
filterwarnings = [
	       "ignore::DeprecationWarning",
]
