[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apel_plugin"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
	     "python-auditor==0.1.0",
	     "pytz==2023.3",
	     "requests==2.31.0",
	     "cryptography==41.0.1",
]
description = "AUDITOR plugin for sending accounting data to APEL"
readme = "README.md"

[project.optional-dependencies]
style = [
      "black",
      "flake8",
]
tests = [
      "pytest",
      "pytest-cov",
]

[project.scripts]
apel-publish = "apel_plugin.publish:main"
apel-republish = "apel_plugin.republish:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["*__init__.py","*publish.py"]
branch = true

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-s -v --cov"
testpaths = [
	  "tests",
]
filterwarnings = [
	       "ignore::DeprecationWarning",
]
